[package]
name = "eth-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
csv = "1.3"
futures = "0.3"
dashmap = "6.1"
reqwest = { version = "0.12", features = ["json"] }
plotters = "0.3"